--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,6 +61,7 @@
         android:id="@+id/btnClockIn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="startClockedInView"
         android:layout_marginBottom="40sp"
         android:text="@string/btnClockIn" />
 
