--- a/app/src/main/res/layout/activity_clocked_in.xml
+++ b/app/src/main/res/layout/activity_clocked_in.xml
@@ -45,4 +45,11 @@
         android:layout_marginTop="10sp"
         android:text="@string/btnClockOut"
         android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/lblTaskDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20sp"
+        android:textSize="20sp"/>
 </LinearLayout>
