--- a/app/src/main/res/layout/activity_clocked_in.xml
+++ b/app/src/main/res/layout/activity_clocked_in.xml
@@ -44,7 +44,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
         android:text="@string/btnClockOut"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:onClick="clockOut"/>
 
     <TextView
         android:id="@+id/lblTaskDescription"
