--- a/app/src/main/res/layout/activity_teacher_list.xml
+++ b/app/src/main/res/layout/activity_teacher_list.xml
@@ -7,6 +7,32 @@
     tools:context="com.example.student.cooper_assign2.TeacherListActivity">
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="75sp"
+        android:orientation="horizontal"
+        android:weightSum="1">
+        <View
+            android:layout_width="0sp"
+            android:layout_height="0sp"
+            android:layout_weight=".6" />
+
+        <ImageView
+            android:id="@+id/teacherImage"
+            android:layout_width="100sp"
+            android:layout_height="75sp"
+            android:layout_gravity="center" />
+
+        <Button
+            android:id="@+id/btnAddTeacherPicture"
+            android:layout_width="50sp"
+            android:layout_height="54dp"
+            android:layout_gravity="right"
+            android:background="@mipmap/camerabtn"
+            android:gravity="center_vertical"
+            android:onClick="getImage"/>
+    </LinearLayout>
+
 
     <EditText
         android:id="@+id/txtFirstName"
@@ -75,6 +101,7 @@
                 android:text="@string/txtRemoveAll" />
 
     </LinearLayout>
+
     <ListView
         android:id="@+id/lstTeachersView"
         android:layout_width="match_parent"
