--- a/app/src/main/res/layout/activity_admin_view.xml
+++ b/app/src/main/res/layout/activity_admin_view.xml
@@ -44,5 +44,6 @@ tools:context="com.example.student.cooper_assign2.AdminView">
         android:layout_width="match_parent"
         android:layout_height="80sp"
         android:layout_marginTop="15sp"
-        android:text="@string/btnAdminReport" />
+        android:text="@string/btnAdminReport"
+        android:onClick="startGenerateReportActivity"/>
 </LinearLayout>
