--- a/app/src/main/res/layout/activity_student_list.xml
+++ b/app/src/main/res/layout/activity_student_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -20,7 +21,8 @@
             android:id="@+id/studentImage"
             android:layout_width="100sp"
             android:layout_height="75sp"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            app:srcCompat="@mipmap/noimgavail" />
 
         <Button
             android:id="@+id/btnAddPicture"
