--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -98,7 +98,7 @@
             android:layout_weight=".75"/>
         <ImageView
             android:id="@+id/imgMainTask"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             app:srcCompat="@color/colorAccent"
             android:layout_weight=".25"/>
