--- a/app/src/main/res/layout/activity_teacher_list.xml
+++ b/app/src/main/res/layout/activity_teacher_list.xml
@@ -76,15 +76,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="15sp">
-            <Button
-                android:id="@+id/btnAddTeacher"
-                android:layout_width="104dp"
-                android:layout_height="53dp"
-                android:layout_weight=".33"
-                android:onClick="addTeacher"
-                android:text="@string/txtAddTeacher" />
+        android:layout_marginBottom="15sp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnAddTeacher"
+            android:layout_width="104dp"
+            android:layout_height="53dp"
+            android:layout_weight=".33"
+            android:onClick="addTeacher"
+            android:text="@string/txtAddTeacher" />
 
         <Button
             android:id="@+id/btnRemoveTeacher"
@@ -99,7 +100,7 @@
             android:layout_width="104dp"
             android:layout_height="53dp"
             android:layout_weight=".33"
-            android:onClick="editTeacher"
+            android:onClick="openEditTeacherActivity"
             android:text="@string/btnEdit" />
 
     </LinearLayout>
