--- a/app/src/main/res/layout/activity_edit__task.xml
+++ b/app/src/main/res/layout/activity_edit__task.xml
@@ -1,9 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.student.cooper_assign2.Edit_Task">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/lblSelectTask"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10sp"
+        android:text="@string/txtSelectATask"
+        android:textSize="30sp" />
+
+    <Spinner
+        android:id="@+id/spinEditTask"
+        android:background="#0090ff"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="60sp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="75sp"
+        android:layout_marginTop="15sp"
+        android:layout_marginBottom="15sp"
+        android:orientation="horizontal"
+        android:weightSum="1">
+        <View
+            android:layout_width="0sp"
+            android:layout_height="0sp"
+            android:layout_weight=".6" />
+
+        <ImageView
+            android:id="@+id/taskImageEdit"
+            android:layout_width="100sp"
+            android:layout_height="75sp"
+            android:layout_gravity="center"
+            app:srcCompat="@mipmap/noimgavail" />
+
+        <Button
+            android:id="@+id/btnAddTaskImage"
+            android:layout_width="50sp"
+            android:layout_height="54dp"
+            android:layout_gravity="right"
+            android:background="@mipmap/camerabtn"
+            android:onClick="getImageEdit"
+            android:gravity="center_vertical" />
+    </LinearLayout>
+
+    <EditText
+        android:id="@+id/txtTaskName"
+        android:layout_width="200sp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="6dp"
+        android:ems="10"
+        android:hint="@string/txtTaskName"
+        android:inputType="text" />
+
+    <EditText
+        android:id="@+id/txtTaskDescr"
+        style="@style/Widget.AppCompat.EditText"
+        android:layout_width="match_parent"
+        android:layout_height="166dp"
+        android:gravity="top|start"
+        android:hint="@string/txtTaskDescr"
+        android:lines="8"
+        android:maxLength="200"
+        android:scrollbars="vertical" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnSave"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight=".5"
+            android:onClick="save"
+            android:text="@string/btnSave" />
+
+        <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight=".5"
+            android:onClick=""
+            android:text="@string/btnCancel" />
+    </LinearLayout>
+
+</LinearLayout>
