--- a/app/src/main/res/layout/activity_task_list.xml
+++ b/app/src/main/res/layout/activity_task_list.xml
@@ -84,6 +84,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight=".33"
+            android:onClick="editTask"
             android:text="@string/btnEdit" />
 
 
