--- a/app/src/main/res/layout/spinner_with_image_item.xml
+++ b/app/src/main/res/layout/spinner_with_image_item.xml
@@ -1,32 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+<!--  Single Item Design -->
+<LinearLayout xmlns:android= "http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    >
 
-    <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/spinnerRow"
+    <ImageView
+        android:id="@+id/spinnerImageView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:padding="10dp" />
 
-        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/spinnerItemTextView"
-            style="?android:attr/spinnerItemStyle"
-            android:layout_width="300sp"
-            android:layout_height="50sp"
-            android:background="#0090ff"
-            android:ellipsize="middle"
-            android:gravity="center"
-            android:maxLines="1"
-            android:textAlignment="center"
-            android:textColor="#000000" />
-
-        <ImageView
-            android:id="@+id/spinnerImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="50sp"
-            app:srcCompat="@mipmap/noimgavail" />
-
-    </TableRow>
-</TableLayout>
+    <TextView
+        android:id="@+id/spinnerItemTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:padding="10dp"></TextView>
+</LinearLayout>
 
