--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,14 +66,6 @@
         android:textSize="20sp" />
 
 
-    <!--TO ADD TASK IMAGEVIEW-->
-    <!--<Spinner
-        android:id="@+id/spinTask"
-        android:layout_width="match_parent"
-        android:layout_height="60sp"
-        android:layout_marginBottom="10sp"
-        android:background="#0090ff" />-->
-    <!--UNCOMMENT THE CODE BELOW AND DELETE CODE ABOVE-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60sp"
@@ -96,7 +88,16 @@
         android:onClick="startClockedInView"
         android:text="@string/btnClockIn" />
 
+
     <!--Nested layout to allow elements to be side by side-->
+    <EditText
+        android:id="@+id/txtTeacherEmailLog"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Teacher Email"
+        android:inputType="textEmailAddress" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -106,7 +107,7 @@
             android:id="@+id/txtTeacherID"
             android:layout_width="100sp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="150sp"
+            android:layout_marginRight="100sp"
             android:layout_marginTop="10sp"
             android:ems="10"
             android:hint="Teacher ID"
@@ -115,7 +116,7 @@
         <Button
             android:id="@+id/btnAdmin"
             android:layout_width="97dp"
-            android:onClick="startAdminView"
+            android:onClick="handleLogin"
             android:layout_height="wrap_content"
             android:text="@string/btnAdminLog" />
     </LinearLayout>
