--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#0079C2</color>
     <color name="colorPrimaryDark">#0079C2</color>
-    <color name="colorAccent">#fff</color>
+    <color name="colorAccent">#000</color>
 </resources>
