--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -9,4 +9,4 @@
     android:gravity="center"
     android:singleLine="true"
     android:textAlignment="center"
-    android:textColor="#000000" />
+    android:textColor="#FFF" />
